# ecommerce-scraper

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/scraper/: cli.py  config.py  exceptions.py  logger.py  models.py
src/scraper/exporters/: csv_exporter.py
src/scraper/http/: client.py
src/scraper/parsers/: amazon_parser.py
src/scraper/services/: scraper_service.py
tests/: test_amazon_parser.py  test_csv_exporter.py  test_http_client.py  test_scraper_service.py
