[project]
name = "ecommerce-scraper"
version = "0.1.0"
description = "Structured e-commerce scraping tool with CLI and logging"
authors = [{ name = "Your Name" }]
requires-python = ">=3.10"

[tool.pytest.ini_options]
pythonpath = ["src"]    

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]